[gd_scene load_steps=9 format=3 uid="uid://bcl4apgybnvbm"]

[ext_resource type="Script" uid="uid://c4yfaik5027ci" path="res://Entities/RythmUI/RythmUi.gd" id="1_8ac7i"]
[ext_resource type="Resource" uid="uid://dwhohgimp3acc" path="res://Stages/Prototype.tres" id="2_0euut"]
[ext_resource type="Texture2D" uid="uid://3cvv4xevlktq" path="res://Entities/RythmUI/textbox/TextBox.png" id="2_d8qxt"]
[ext_resource type="FontFile" uid="uid://c4hwc322kl463" path="res://Assets/Fonts/Times New Normal Regular.ttf" id="3_6bilc"]
[ext_resource type="Texture2D" uid="uid://bgdpu68mo0v85" path="res://Entities/RythmUI/textbox/SpeakerBox.png" id="4_cafeb"]
[ext_resource type="PackedScene" uid="uid://b37fieklvmt6e" path="res://Entities/BeatsBar/BeatsBar.tscn" id="6_a2w2c"]

[sub_resource type="FontVariation" id="FontVariation_0euut"]
base_font = ExtResource("3_6bilc")
variation_embolden = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_0euut"]
font = ExtResource("3_6bilc")
font_size = 22

[node name="RythmUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_8ac7i")
dialogue = ExtResource("2_0euut")

[node name="TextBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 123.0
offset_top = -224.0
offset_right = 469.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_d8qxt")
region_rect = Rect2(0, 0, 90, 90)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="LineLabel" type="RichTextLabel" parent="TextBox/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_6bilc")
theme_override_fonts/bold_font = SubResource("FontVariation_0euut")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true

[node name="SpeakerBox" type="TextureRect" parent="TextBox"]
layout_mode = 0
offset_top = -40.0
offset_right = 84.0
texture = ExtResource("4_cafeb")

[node name="MarginContainer" type="MarginContainer" parent="TextBox/SpeakerBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SpeakerLabel" type="Label" parent="TextBox/SpeakerBox/MarginContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_0euut")
vertical_alignment = 1

[node name="TypingTimer" type="Timer" parent="TextBox"]
wait_time = 0.05

[node name="BeatsBar" parent="." instance=ExtResource("6_a2w2c")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.0
offset_top = 15.0
offset_right = 206.0
offset_bottom = 72.0
grow_horizontal = 2

[connection signal="timeout" from="TextBox/TypingTimer" to="." method="_on_typing_timer_timeout"]
